feat(dto-refactor): migrate playlist & song flow to DTOs and add REST endpoints